hphp/hack/test/typecheck/defined/conditional.php.exp
File "conditional.php", line 5, characters 10-11:
The variable $x is defined (Naming[2007])
  File "conditional.php", line 4, characters 14-15:
  But in a different scope
File "conditional.php", line 5, characters 10-11:
Undefined variable: $x (Naming[2050])
